# rain.wasm

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: publish.yml  rainix.yml
macros/: Cargo.toml
macros/src/: lib.rs
macros/src/tests/: tests.rs
macros/src/wasm_export/: attrs.rs  builder.rs  error.rs  fn_tools.rs  func.rs  impl_block.rs  mod.rs  standalone_fn.rs  tools.rs
macros/tests/: tests.rs
macros/tests/fail/: dup_skip_attr.stderr  dup_unchecked_return_type_attr.stderr  expected_impl.rs  expected_impl.stderr  expected_result.rs  expected_result.stderr  invalid_attrs_delimiter.rs  invalid_attrs_delimiter.stderr  invalid_skip_attr.rs  invalid_skip_attr.stderr  invalid_unchecked_return_type_attr.rs  invalid_unchecked_return_type_attr.stderr
macros/tests/happy/: doc_comments_impl.test.expanded.rs  doc_comments_impl.test.rs  doc_comments_standalone.test.expanded.rs  doc_comments_standalone.test.rs  first.expanded.rs  first.rs  func.test.expanded.rs  func.test.rs  impl.test.expanded.rs  impl.test.rs
macros/tests/pass/: first.expanded.rs  first.rs
macros/tests/unhappy/: dup_js_name_param_attr.test.rs  dup_js_name_param_attr.test.stderr  dup_param_description_attr.test.rs  dup_param_description_attr.test.stderr  dup_preserve_js_class.test.rs  dup_preserve_js_class.test.stderr  dup_return_description_attr.test.rs  dup_return_description_attr.test.stderr  dup_skip_attr.rs  dup_skip_attr.stderr  dup_skip_attr.test.rs  dup_skip_attr.test.stderr  dup_unchecked_param_type_attr.test.rs  dup_unchecked_param_type_attr.test.stderr  dup_unchecked_return_type_attr.stderr  dup_unchecked_return_type_attr.test.rs  dup_unchecked_return_type_attr.test.stderr  expected_impl.rs  expected_impl.stderr  expected_impl.test.stderr  expected_js_name_param_str_literal.test.rs  expected_js_name_param_str_literal.test.stderr  expected_js_name_param_value.test.rs  expected_js_name_param_value.test.stderr  expected_param_description_str_literal.test.rs  expected_param_description_str_literal.test.stderr  expected_param_description_value.test.rs  expected_param_description_value.test.stderr  expected_pub_vis.test.rs  expected_pub_vis.test.stderr  expected_result.stderr  expected_result.test.rs  expected_result.test.stderr  expected_return_description_str_literal.test.rs  expected_return_description_str_literal.test.stderr  expected_return_description_value.test.rs  expected_return_description_value.test.stderr  expected_str_literal.rs  expected_str_literal.stderr  expected_str_literal.test.rs  (+37 more)
src/: alloy.rs  error.rs  helpers.rs  lib.rs  macros.rs  result.rs  ser.rs
tests/: tests.rs
tests/expand/: custom_tsify.expanded.rs  custom_tsify.test.rs  error_bindgen.rs  wasm_traits.expanded.rs  wasm_traits.rs  wasm_traits.test.expanded.rs
tests/happy/: custom_tsify.test.rs  custom_tsify_generic.test.expanded.rs  custom_tsify_generic.test.rs  wasm_traits.test.expanded.rs  wasm_traits.test.rs  wasm_traits_generic.test.expanded.rs  wasm_traits_generic.test.rs
tests/unhappy/: a.test.rs  expected_literal.test.rs  expected_literal.test.stderr  not_in_scope.test.rs  not_in_scope.test.stderr  unexpected_token.test.rs  (+1 more)
