[package]
name = "wasm_bindgen_helper"
description = "wasm bindgen helpers"
edition = "2021"
license = "CAL-1.0"
version = "0.0.0"
homepage = "https://github.com/rainlanguage/rain.wasm"

[dependencies]
paste = { version = "1.0" }
js-sys = { version = "0.3" }
wasm-bindgen = { version = "0.2" }
serde-wasm-bindgen = { version = "0.6" }
wasm-bindgen-futures = { version = "0.4" }
serde = { version = "1.0", features = ["derive", "rc"] }
tsify-next = { version = "0.5", default-features = false, features = ["js", "wasm-bindgen"] }

[dev-dependencies]
serde_test = "1"
wasm-bindgen-test = "0.3"
